[gd_scene load_steps=27 format=3 uid="uid://d3mcapw0wprxg"]

[ext_resource type="Texture2D" uid="uid://cmocmkjb3dvu" path="res://Data/Textures/square.png" id="1"]
[ext_resource type="PackedScene" uid="uid://cqgqonl380moq" path="res://Levels/portal/PortalRadio.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://b76fb8hss0wus" path="res://Levels/portal/wall1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d2xbuypybwinp" path="res://Levels/portal/exit_door1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://tap7g0xjrkht" path="res://Levels/portal/exit_door2.png" id="4_5dlfb"]
[ext_resource type="AudioStream" uid="uid://ckslnm3gg74qc" path="res://Levels/portal/rumble.ogg" id="5_ygt1f"]
[ext_resource type="Texture2D" uid="uid://cicnw1mi2h4ia" path="res://Levels/portal/exit_border.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c51wrfy5k446r" path="res://Levels/portal/wall_for_exit.png" id="7"]
[ext_resource type="PackedScene" uid="uid://jcdl13kns30s" path="res://Levels/portal/portal_button.tscn" id="8"]
[ext_resource type="Script" path="res://Levels/portal/portal1.gd" id="9"]
[ext_resource type="Script" path="res://Scenes/Classes/color_sprite.gd" id="11"]

[sub_resource type="Gradient" id="Gradient_ykav0"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vnda6"]
gradient = SubResource("Gradient_ykav0")

[sub_resource type="Curve" id="Curve_ieo2w"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pokmn"]
curve = SubResource("Curve_ieo2w")

[sub_resource type="Curve" id="Curve_mbf3v"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.121951, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_m2qqe"]
curve = SubResource("Curve_mbf3v")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cmelh"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 1, 0)
emission_shape = 2
emission_sphere_radius = 196.0
angle_min = -720.0
angle_max = 720.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
orbit_velocity_min = -0.2
orbit_velocity_max = 0.2
radial_velocity_min = -500.0
gravity = Vector3(0, 0, 0)
radial_accel_min = -500.0
scale_min = 24.0
scale_max = 32.0
scale_curve = SubResource("CurveTexture_m2qqe")
color_initial_ramp = SubResource("GradientTexture1D_vnda6")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("CurveTexture_pokmn")

[sub_resource type="Gradient" id="1"]
colors = PackedColorArray(0, 0, 0, 0.294118, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")

[sub_resource type="ParticleProcessMaterial" id="3"]
emission_shape = 1
emission_sphere_radius = 128.0
spread = 180.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("2")

[sub_resource type="AudioStreamRandomizer" id="4"]
random_pitch = 1.25
streams_count = 1
stream_0/stream = ExtResource("5_ygt1f")

[sub_resource type="CircleShape2D" id="10"]
radius = 640.0

[sub_resource type="RectangleShape2D" id="11"]
size = Vector2(48, 144)

[sub_resource type="RectangleShape2D" id="12"]
size = Vector2(1600, 128)

[sub_resource type="RectangleShape2D" id="13"]
size = Vector2(128, 720)

[node name="portal1" type="Node2D"]
script = ExtResource("9")
movement = 1

[node name="decor" type="Node2D" parent="."]
z_index = -7

[node name="GPUParticles2D" type="GPUParticles2D" parent="decor"]
position = Vector2(640, 544)
emitting = false
amount = 256
process_material = SubResource("ParticleProcessMaterial_cmelh")
texture = ExtResource("1")
lifetime = 0.5
fixed_fps = 0

[node name="Node2D" type="Node2D" parent="decor"]
position = Vector2(640, 480)

[node name="GPUParticles2D" type="GPUParticles2D" parent="decor/Node2D"]
position = Vector2(0, 48)
amount = 256
process_material = SubResource("3")
texture = ExtResource("1")
lifetime = 2.0

[node name="door1" type="Sprite2D" parent="decor/Node2D"]
texture = ExtResource("4")

[node name="door2" type="Sprite2D" parent="decor/Node2D"]
texture = ExtResource("4_5dlfb")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="decor/Node2D"]
stream = SubResource("4")
volume_db = -80.0
pitch_scale = 4.0
autoplay = true

[node name="bg" type="Node2D" parent="decor"]
modulate = Color(0.784314, 0.784314, 0.784314, 1)
position = Vector2(640, 480)

[node name="Sprite2D" type="Sprite2D" parent="decor/bg"]
position = Vector2(-640, -320)
texture = ExtResource("3")

[node name="Sprite3" type="Sprite2D" parent="decor/bg"]
position = Vector2(-320, -320)
texture = ExtResource("3")

[node name="Sprite5" type="Sprite2D" parent="decor/bg"]
position = Vector2(0, -320)
texture = ExtResource("3")

[node name="Sprite6" type="Sprite2D" parent="decor/bg"]
position = Vector2(320, -320)
texture = ExtResource("3")

[node name="Sprite12" type="Sprite2D" parent="decor/bg"]
position = Vector2(640, -320)
texture = ExtResource("3")

[node name="Sprite10" type="Sprite2D" parent="decor/bg"]
position = Vector2(-640, -640)
texture = ExtResource("3")

[node name="Sprite11" type="Sprite2D" parent="decor/bg"]
position = Vector2(-320, -640)
texture = ExtResource("3")

[node name="Sprite14" type="Sprite2D" parent="decor/bg"]
position = Vector2(0, -640)
texture = ExtResource("3")

[node name="Sprite15" type="Sprite2D" parent="decor/bg"]
position = Vector2(320, -640)
texture = ExtResource("3")

[node name="Sprite16" type="Sprite2D" parent="decor/bg"]
position = Vector2(640, -640)
texture = ExtResource("3")

[node name="Sprite2" type="Sprite2D" parent="decor/bg"]
position = Vector2(-640, 0)
texture = ExtResource("3")

[node name="Sprite8" type="Sprite2D" parent="decor/bg"]
position = Vector2(320, 0)
texture = ExtResource("3")

[node name="Sprite13" type="Sprite2D" parent="decor/bg"]
position = Vector2(640, 0)
texture = ExtResource("3")

[node name="Sprite4" type="Sprite2D" parent="decor/bg"]
position = Vector2(-320, 0)
texture = ExtResource("3")

[node name="Sprite7" type="Sprite2D" parent="decor/bg"]
texture = ExtResource("7")

[node name="Sprite9" type="Sprite2D" parent="decor/bg"]
texture = ExtResource("6")

[node name="Spawns" type="Node2D" parent="."]

[node name="Position2D2" type="Marker2D" parent="Spawns"]
position = Vector2(648.011, 452.371)

[node name="Position2D5" type="Marker2D" parent="Spawns"]
position = Vector2(668.11, 264.563)

[node name="Position2D3" type="Marker2D" parent="Spawns"]
position = Vector2(549.389, 275.562)

[node name="Position2D4" type="Marker2D" parent="Spawns"]
position = Vector2(694.15, 370.191)

[node name="Position2D13" type="Marker2D" parent="Spawns"]
position = Vector2(512.32, 505.728)

[node name="Position2D14" type="Marker2D" parent="Spawns"]
position = Vector2(615.967, 359.198)

[node name="Position2D10" type="Marker2D" parent="Spawns"]
position = Vector2(494.846, 441.329)

[node name="Position2D9" type="Marker2D" parent="Spawns"]
position = Vector2(750.07, 495.292)

[node name="collisions" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="collisions"]
position = Vector2(640, 540)
gravity_space_override = 1
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 1536.0
linear_damp = 0.0
angular_damp = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/Area2D"]
shape = SubResource("10")

[node name="death_zone" type="Area2D" parent="collisions"]
position = Vector2(640, 540)

[node name="CollisionShape2D" type="CollisionShape2D" parent="collisions/death_zone"]
shape = SubResource("11")

[node name="PortalRadio" parent="collisions" instance=ExtResource("2")]
position = Vector2(320, 608)

[node name="portal_button" parent="collisions" instance=ExtResource("8")]
position = Vector2(1040, 573)

[node name="StaticBody2D" type="StaticBody2D" parent="collisions"]
position = Vector2(640, 704)
script = ExtResource("11")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="collisions/StaticBody2D"]
shape = SubResource("12")

[node name="Sprite2D" type="Sprite2D" parent="collisions/StaticBody2D/CollisionShape2D3"]
scale = Vector2(1600, 128)
texture = ExtResource("1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="collisions/StaticBody2D"]
position = Vector2(-704, -424)
shape = SubResource("13")

[node name="Sprite2D" type="Sprite2D" parent="collisions/StaticBody2D/CollisionShape2D4"]
scale = Vector2(128, 720)
texture = ExtResource("1")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="collisions/StaticBody2D"]
position = Vector2(704, -424)
shape = SubResource("13")

[node name="Sprite2D" type="Sprite2D" parent="collisions/StaticBody2D/CollisionShape2D5"]
scale = Vector2(128, 720)
texture = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
